# SIQE

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  launch_trading.sh  main.py  pyproject.toml  requirements.txt  screen_out.txt  screen_out2.txt  screen_output2.txt  siqe.service  test_integration.py  validate_setup.py
alerts/: __init__.py  alert_manager.py  alert_types.py  channels.py  formatters.py  keyboards.py  state_provider.py  subscriptions.py  telegram_bot.py
api/: main.py
backtest/: __init__.py  config.py  data_provider.py  engine.py  enhanced_engine.py  performance.py  report.py  slippage_model.py  walk_forward.py
config/: settings.py
core/: clock.py  data_engine.py  retry.py  ws_streamer.py
decision_engine/: decision_maker.py
docs/: 10_10_enhancement_report.md
ev_engine/: ev_calculator.py
execution_adapter/: vnpy_bridge.py
feedback/: feedback_loop.py
infra/: key_manager.py  logger.py  metrics.py
learning/: adaptive_controller.py  learning_engine.py
memory/: state_manager.py
meta_harness/: meta_governor.py
models/: __init__.py  trade.py
regime/: regime_engine.py
reports/: production_readiness_20260405_054047.md  production_readiness_20260405_054411.md  production_readiness_20260405_055905.md  production_readiness_20260405_060035.md  production_readiness_20260405_060238.md  production_readiness_20260405_065644.md  production_readiness_20260405_074716.md  production_readiness_20260405_101301.md  production_readiness_20260405_101653.md  production_readiness_risk_20260405_061828.md  (+13 more)
scripts/: run_bot.py  (+25 more)
(+148 files in other folders)
